--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -241,7 +241,7 @@ presubmits:
         - "--" # end kubernetes_execute_bazel flags (consider following flags as text)
         - "./test/presubmit-tests.sh"
         - "--run-test"
-        - "./test/upgrade-tests.sh"
+        - "./test/e2e-upgrade-tests.sh"
         # Bazel needs privileged mode in order to sandbox builds.
         securityContext:
           privileged: true
