--- a/ci/prow/plugins.yaml
+++ b/ci/prow/plugins.yaml
@@ -24,7 +24,7 @@ repo_milestone:
     # You can curl the following endpoint in order to determine the github ID of
     # your team responsible for maintaining the milestones:
     # curl -H "Authorization: token <token>" https://api.github.com/orgs/<org-name>/teams
-    maintainers_id: 0
+    maintainers_id: 3012514
     maintainers_team: knative-milestone-maintainers
 
 plugins:
