--- a/images/prow-tests/Makefile
+++ b/images/prow-tests/Makefile
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 IMG = gcr.io/knative-tests/test-infra/prow-tests
-TAG := $(shell date +v%Y%m%d)-$(shell git describe --always --dirty --exclude '*')
+TAG := $(shell date +v%Y%m%d)-$(shell git describe --always --dirty --match '^$')
 
 all: build
 
