--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -555,6 +555,38 @@ presubmits:
           requests:
             memory: "1Gi"
 
+- cron: "31 8 * * *" # Run at 01:31PST every day (08:31 UTC)
+  name: ci-knative-build-pipeline-nightly-release
+  agent: kubernetes
+  labels:
+    preset-service-account: "true"
+    preset-bazel-scratch-dir: "true"
+    preset-bazel-remote-cache-enabled: "true"
+    preset-dind-enabled: "true"
+  spec:
+    containers:
+    - image: gcr.io/knative-tests/test-infra/prow-tests:latest
+      imagePullPolicy: Always
+      args:
+      - "--scenario=kubernetes_execute_bazel"
+      - "--clean"
+      - "--job=$(JOB_NAME)"
+      - "--repo=github.com/knative/build-pipeline"
+      - "--root=/go/src"
+      - "--service-account=/etc/service-account/service-account.json"
+      - "--upload=gs://knative-prow/logs"
+      - "--timeout=90" # 1.5h
+      - "--" # end bootstrap args, scenario args below
+      - "--" # end kubernetes_execute_bazel flags (consider following flags as text)
+      - "./hack/release.sh"
+      - "--publish"
+      - "--tag-release"
+      # Bazel needs privileged mode in order to sandbox builds.
+      securityContext:
+        privileged: true
+      resources:
+        requests:
+          memory: "1Gi"
   - name: pull-knative-build-pipeline-go-coverage
     labels:
       preset-service-account: "true"
@@ -1524,7 +1556,7 @@ periodics:
         requests:
           memory: "1Gi"
 - cron: "1 8 * * *" # Run at 01:01PST every day (08:01 UTC)
-  name: ci-knative-serving-release
+  name: ci-knative-serving-nightly-release
   agent: kubernetes
   labels:
     preset-service-account: "true"
@@ -1707,7 +1739,7 @@ periodics:
         requests:
           memory: "1Gi"
 - cron: "31 8 * * *" # Run at 01:31PST every day (08:31 UTC)
-  name: ci-knative-build-release
+  name: ci-knative-build-nightly-release
   agent: kubernetes
   labels:
     preset-service-account: "true"
@@ -1883,7 +1915,7 @@ periodics:
         requests:
           memory: "1Gi"
 - cron: "16 9 * * *" # Run at 02:16PST every day (09:16 UTC)
-  name: ci-knative-eventing-release
+  name: ci-knative-eventing-nightly-release
   agent: kubernetes
   labels:
     preset-service-account: "true"
@@ -1965,7 +1997,7 @@ periodics:
         requests:
           memory: "1Gi"
 - cron: "16 9 * * *" # Run at 02:16PST every day (09:16 UTC)
-  name: ci-knative-eventing-sources-release
+  name: ci-knative-eventing-sources-nightly-release
   agent: kubernetes
   labels:
     preset-service-account: "true"
