Instead of deleting the images in GCR after the test finishes, have a job to perform it from time to time (and only old images).
Add cleanup.sh script under tools
Add unit testing under test/unit
Add Prow job calling this cleanup script periodically
Remove delete_gcr_images function from common library.sh
Refactor some common functions to library
After this PR, scripts/functions for images deletions will only live under knative/test-infra repo, and no jobs other than cleanup-old-images job should delete any images.

--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -2148,7 +2148,26 @@ periodics:
       - "--profile-name=coverage_profile.txt"
       - "--cov-target=."
       - "--cov-threshold-percentage=80"
-
+- cron: "0 19 * * 1" # Run at 11:00PST/12:00PST every Monday (19:00 UTC)
+  name: ci-knative-cleanup
+  branches:
+  - master
+  agent: kubernetes
+  labels:
+    preset-service-account: "true"
+  decorate: true
+  clone_uri: "https://github.com/knative/test-infra.git"
+  spec:
+    containers:
+    - image: gcr.io/knative-tests/test-infra/prow-tests:latest
+      imagePullPolicy: Always
+      command:
+      - "./tools/cleanup.sh"
+      args:
+      - "delete-old-gcr-images"
+      - "--project-resource-yaml ci/prow/boskos/resources.yaml"
+      - "--days-to-keep 90"
+  
 postsubmits:
   knative/serving:
   - name: post-knative-serving-go-coverage
