Make cleanup job passing by adding placeholder in artifacts
Gubernator consider job failure if no  file found under artifacts, add placeholder file under artifacts to make it pass

--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -2230,6 +2230,7 @@ periodics:
       - "--project-resource-yaml ci/prow/boskos/resources.yaml"
       - "--days-to-keep 90"
       - "--service-account /etc/test-account/service-account.json"
+      - "--artifacts=$(ARTIFACTS)"
   
 postsubmits:
   knative/serving:
