Assorted fixes to the "dot" releases feature
* set repo upstream, if necessary, for tagging/publishing releases
* add checks for valid commits in the release branches
* don't reuse $GITHUB_TOKEN if already set for security
* correctly use the token, if passed, when pushing the tag to GitHub
* fix parameters in the Knative Serving job

Bonuses:
* created the global $REPO_NAME environment variable
* reduced boilerplate in release.sh when parsing flags with parameters
* more readable expected test statuses in release-tests.sh
* renamed helper.sh to a more obvious name

--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -1626,9 +1626,9 @@ periodics:
       - "--" # end kubernetes_execute_bazel flags (consider following flags as text)
       - "./hack/release.sh"
       - "--dot-release"
-      - "--release-gcs=knative-releases/serving"
-      - "--release-gcr=gcr.io/knative-releases"
-      - "--github-token=/etc/hub-token/token"
+      - "--release-gcs knative-releases/serving"
+      - "--release-gcr gcr.io/knative-releases"
+      - "--github-token /etc/hub-token/token"
       # Bazel needs privileged mode in order to sandbox builds.
       securityContext:
         privileged: true
@@ -1642,7 +1642,7 @@ periodics:
     volumes:
     - name: hub-token
       secret:
-        secretName: token
+        secretName: hub-token
 - cron: "1 9 * * 6" # Run at 02:01PST every Saturday (09:01 UTC)
   name: ci-knative-serving-playground
   agent: kubernetes
