Fix backup Makefile and auth
Apparently "works on my machine" isn't enough.

1. The Makefile was broken, use the current directory for the build
context.
2. Activate the service account (not necessary for gcrane, but necessary
for gsutil).

--- a/images/backups/Dockerfile
+++ b/images/backups/Dockerfile
@@ -21,6 +21,4 @@ LABEL maintainer "Jon Johnson <jonjohnson@google.com>"
 COPY --from=gcrane /ko-app /bin/gcrane
 
 # Copy the entrypoint shell script.
-COPY . .
-
-ENTRYPOINT ["/backup.sh"]
+ADD . .
