--- a/images/backups/Makefile
+++ b/images/backups/Makefile
@@ -18,7 +18,7 @@ TAG := $(shell date +v%Y%m%d)-$(shell git describe --always --dirty --match '^$$
 all: build
 
 build:
-	docker build -t $(IMG):$(TAG) -f Dockerfile ../..
+	docker build -t $(IMG):$(TAG) -f Dockerfile .
 	docker tag $(IMG):$(TAG) $(IMG):latest
 
 push_versioned: build
