For backup image, pass keyfile as first argument

--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -1917,7 +1917,9 @@ periodics:
       imagePullPolicy: Always
       command:
       - "/backup.sh"
-  
+      args:
+      - "/etc/backup-account/service-account.json"
+
 postsubmits:
   knative/serving:
   - name: post-knative-serving-go-coverage
