Fix link to tide dashboard
Fixes #378.

--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -68,7 +68,7 @@ tide:
   merge_method:
     knative: squash
     knative/build-pipeline: rebase
-  target_url: https://prow.knative.dev/tide.html
+  target_url: https://prow.knative.dev/tide
 
 presets:
 # test run service account
