increasing images cleanup job timeout to 8 hours

--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -1900,6 +1900,8 @@ periodics:
   labels:
     preset-test-account: "true"
   decorate: true
+  decoration_config:
+    timeout: 28800000000000 # 8 hours
   extra_refs:
   - org: knative
     repo: test-infra
