Fix regexp for conformance-tests tab

--- a/ci/testgrid/config.yaml
+++ b/ci/testgrid/config.yaml
@@ -160,7 +160,7 @@ dashboards:
     base_options: 'exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name='
   - name: conformance-tests
     test_group_name: ci-knative-serving-continuous
-    base_options: 'include-filter-by-regex=//knative/serving/test/conformance:&sort-by-name='
+    base_options: 'include-filter-by-regex=test/conformance\.&sort-by-name='
   - name: performance
     test_group_name: ci-knative-serving-performance
     base_options: 'exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name='
