--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -77,6 +77,8 @@ presets:
   env:
   - name: GOOGLE_APPLICATION_CREDENTIALS
     value: /etc/test-account/service-account.json
+  - name: GITHUB_BOT_TOKEN
+    value: /etc/test-account/github_bot_token
   volumes:
   - name: account
     secret:
