Initial version of the Prow config generator
`make_config.go` generates `config.yaml` based on a much smaller and simpler config `config_knative.yaml`.

This initial version makes some concessions regarding the output generation in order to produce a predictable, trackable config file, which can be easily compared to the current version.

--- a/ci/prow/Makefile
+++ b/ci/prow/Makefile
@@ -22,6 +22,9 @@ PROW_DIR := $(dir $(abspath $(lastword $(MAKEFILE_LIST))))
 get-cluster-credentials:
 	gcloud container clusters get-credentials "$(CLUSTER)" --project="$(PROJECT)" --zone="$(ZONE)"
 
+config:
+	go run make_config.go config_knative.yaml > config.yaml
+
 update-config: get-cluster-credentials
 	kubectl create configmap config --from-file=config.yaml=config.yaml --dry-run -o yaml | kubectl replace configmap config -f -
 
