--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -178,3 +178,14 @@ periodics:
   knative/caching:
     - continuous: true
       cron: "30 * * * *" # Run every hour and 30 minutes
+
+  knative/test-infra:
+    - flakytool: true
+      cron: "0 12 * * *" # Run at 4:00PST/5:00PST every day (12:00 UTC)
+      image: [[.Base.Image]]
+      command:
+      - "/flaky-test-reporter"
+      args:
+      - "--service-account [[.Base.ServiceAccount]]"
+      - "--github-account /etc/github-token/token"
+      - "--slack-account /etc/slack-token/token"
